--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 
     <title>Boolando</title>
 </head>
-<body class="debug">
+<body class="">
     <header>
         <div class="container d-flex space-between align-items-center">
             <nav>
                 <ul class="list-unstyle d-flex">
-                    <li>Donna</li>
-                    <li>Uomo</li>
-                    <li>Bambini</li>
+                    <li>
+                        <strong>Donna</strong>
+                    </li>
+                    <li>
+                        <strong>Uomo</strong>
+                    </li>
+                    <li>
+                        <strong>Bambini</strong>
+                    </li>
                 </ul>
             </nav>
 
@@ -43,12 +49,26 @@
 
     <main>
         <div class="container d-flex products">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card d-flex">
+                <img src="./assets/img/1.webp" alt="levis">
+                <span></span>
+                <span></span>
+            </div>
+            <div class="card d-flex">
+                <img src="./assets/img/2.webp" alt="">
+            </div>
+            <div class="card">
+                <img src="./assets/img/3.webp" alt="">
+            </div>
+            <div class="card">
+                <img src="./assets/img/4.webp" alt="">
+            </div>
+            <div class="card">
+                <img src="./assets/img/5.webp" alt="">
+            </div>
+            <div class="card">
+                <img src="./assets/img/6.webp" alt="">
+            </div>
         </div>
     </main>
 
