--- a/index.html
+++ b/index.html
@@ -49,25 +49,96 @@
 
     <main>
         <div class="container d-flex products">
-            <div class="card d-flex">
-                <img src="./assets/img/1.webp" alt="levis">
-                <span></span>
-                <span></span>
-            </div>
-            <div class="card d-flex">
-                <img src="./assets/img/2.webp" alt="">
+            <div class="card">
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div class="heart">
+                <img src="./assets/img/1.webp" alt="levis tee">
+                <span>LEVI'S</span>
+                <h5>RELAXED FEIT TEE UNISEX </h5>
+                <span>
+                    <span class="sale">14,99&euro;</span>
+                    <span class="or-price">29,99&euro;</span>
+                </span>
+                <span class="sustainable double">
+                    Sostenibilità
+                </span>
+                <span class="on-sale">
+                    -50%
+                </span>
             </div>
             <div class="card">
-                <img src="./assets/img/3.webp" alt="">
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+                <img src="./assets/img/2.webp" alt="guess">
+                <span>GUESS</span>
+                <h5>ROSES TEE</h5>
+                <span>
+                    <span class="sale">20,99&euro;</span>
+                    <span class="or-price">29,99&euro;</span>
+                </span>
+                <span class="on-sale">
+                    -30%
+                </span>
             </div>
             <div class="card">
-                <img src="./assets/img/4.webp" alt="">
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+                <img src="./assets/img/3.webp" alt="zucchero">
+                <span>COME ZUCCHERO FILATO</span>
+                <h5>VOGLIA DI COLORI PASTELLO</h5>
+                <span>
+                    <span class="sale">129,99&euro;</span>
+                    <span class="or-price">184,99&euro;</span>
+                </span>
+                <span class="on-sale">
+                    -30%
+                </span>
             </div>
             <div class="card">
-                <img src="./assets/img/5.webp" alt="">
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+                <img src="./assets/img/4.webp" alt="levis">
+                <span>LEVI'S</span>
+                <h5>LEVI'S TEE UNISEX</h5>
+                <span>
+                    <span class="sale">14,99&euro;</span>
+                    <span class="or-price">29,99&euro;</span>
+                </span>
+                <span class="on-sale">
+                    -50%
+                </span>
+                <span class="sustainable">
+                    Sostenibilità
+                </span>
             </div>
             <div class="card">
-                <img src="./assets/img/6.webp" alt="">
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+                <img src="./assets/img/5.webp" alt="maya">
+                <span>MAYA DELUXE</span>
+                <h5>STRIPE BODICE</h5>
+                <span>
+                    <span class="sale">99,99&euro;</span>
+                </span>
+            </div>
+            <div class="card">
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+                <img src="./assets/img/6.webp" alt="esprit">
+                <span>ESPRIT</span>
+                <h5>MAGLIONE BLACK</h5>
+                <span>
+                    <span class="sale">14,99&euro;</span>
+                </span>
+                <span class="sustainable">
+                    Sostenibilità
+                </span>
             </div>
         </div>
     </main>
