add hover function

--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
 
     <main>
         <div class="container d-flex products">
-            <div class="card">
+            <div class="card ">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div class="heart">
-                <img src="./assets/img/1.webp" alt="levis tee">
+                <div class="levis-fit">
+                    <img src="./assets/img/1.webp" alt="levis">
+                </div>
                 <span>LEVI'S</span>
                 <h5>RELAXED FEIT TEE UNISEX </h5>
                 <span>
@@ -71,7 +73,9 @@
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
-                <img src="./assets/img/2.webp" alt="guess">
+                <div class="guess">
+                    <img src="./assets/img/2.webp" alt="guess">
+                </div>
                 <span>GUESS</span>
                 <h5>ROSES TEE</h5>
                 <span>
@@ -86,7 +90,9 @@
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
-                <img src="./assets/img/3.webp" alt="zucchero">
+                <div class="zucchero">
+                    <img src="./assets/img/3.webp" alt="zucchero">
+                </div>
                 <span>COME ZUCCHERO FILATO</span>
                 <h5>VOGLIA DI COLORI PASTELLO</h5>
                 <span>
@@ -97,11 +103,13 @@
                     -30%
                 </span>
             </div>
-            <div class="card">
+            <div class="card levis-hover">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
-                <img src="./assets/img/4.webp" alt="levis">
+                <div class="levis">
+                    <img src="./assets/img/4.webp" alt="levis">
+                </div>
                 <span>LEVI'S</span>
                 <h5>LEVI'S TEE UNISEX</h5>
                 <span>
@@ -115,22 +123,26 @@
                     Sostenibilità
                 </span>
             </div>
-            <div class="card">
+            <div class="card maya-hover">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
-                <img src="./assets/img/5.webp" alt="maya">
+                <div class="maya">
+                    <img src="./assets/img/5.webp" alt="maya">
+                </div>
                 <span>MAYA DELUXE</span>
                 <h5>STRIPE BODICE</h5>
                 <span>
                     <span class="sale">99,99&euro;</span>
                 </span>
             </div>
-            <div class="card">
+            <div class="card esprit-hover">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
-                <img src="./assets/img/6.webp" alt="esprit">
+                <div class="esprit">
+                    <img src="./assets/img/6.webp" alt="esprit">
+                </div>
                 <span>ESPRIT</span>
                 <h5>MAGLIONE BLACK</h5>
                 <span>
