--- a/index.html
+++ b/index.html
@@ -159,21 +159,31 @@
         <div class="container d-flex space-between align-items-center">
             <div class="info">
                 <h4>
-
+                    Boolando s.r.l
                 </h4>
-                <span></span>
-                <span></span>
-                <span></span>
+                <span>Informazioni legali</span>
+                <span>Informativa sulla privacy</span>
+                <span>Diritto di accesso</span>
             </div>
             <div class="social">
-                <h4>
-
-                </h4>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
+                <h5>
+                    Trovaci anche su
+                </h5>
+                <span>
+                    <i class="fa-brands fa-twitter"></i>
+                </span>
+                <span>
+                    <i class="fa-brands fa-square-facebook"></i>
+                </span>
+                <span>
+                    <i class="fa-brands fa-instagram"></i>
+                </span>
+                <span>
+                    <i class="fa-brands fa-square-pinterest"></i>
+                </span>
+                <span>
+                    <i class="fa-brands fa-square-youtube"></i>
+                </span>
             </div>
         </div>
     </footer>
