add bonus 2 elements

--- a/levis-tee.html
+++ b/levis-tee.html
@@ -49,22 +49,24 @@
     </header>
 
     <main>
-            <div class="container d-flex product">
-            <div class="heart">
-                <i class="fa-solid fa-heart"></i>
+        <div class="container d-flex product">
+             <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
             </div>
-            <div class="levis-fit">
-                <img src="./assets/img/1.webp" alt="levis">
+            <div class="levis">
+                <img src="./assets/img/4.webp" alt="levis">
             </div>
             <span>LEVI'S</span>
-            <h5>RELAXED FIT TEE UNISEX </h5>
+            <h5>LEVI'S TEE UNISEX</h5>
             <span>
                 <span class="sale">14,99&euro;</span>
                 <span class="or-price">29,99&euro;</span>
             </span>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo ratione ut velit, 
-                esse tempore placeat animi beatae molestiae assumenda cupiditate dignissimos, 
-                asperiores sapiente, enim temporibus quas voluptates totam alias ullam.</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, ratione repudiandae! 
+                Perferendis reiciendis excepturi cumque ducimus error aut tempora necessitatibus? Commodi 
+                perferendis reiciendis quas molestiae hic? Nihil veritatis sunt quos?
+            </p>
         </div>
     </main>
 
