--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 
     <main>
         <div class="container d-flex products">
-            <div class="card ">
+            <a href="./relaxed-fit.html" class="card">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
-                </div class="heart">
+                </div>
                 <div class="levis-fit">
                     <img src="./assets/img/1.webp" alt="levis">
                 </div>
                 <span>LEVI'S</span>
-                <h5>RELAXED FEIT TEE UNISEX </h5>
+                <h5>RELAXED FIT TEE UNISEX </h5>
                 <span>
                     <span class="sale">14,99&euro;</span>
                     <span class="or-price">29,99&euro;</span>
@@ -68,8 +68,8 @@
                 <span class="on-sale">
                     -50%
                 </span>
-            </div>
-            <div class="card">
+            </a>
+            <a href="" class="card">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
@@ -85,8 +85,8 @@
                 <span class="on-sale">
                     -30%
                 </span>
-            </div>
-            <div class="card">
+            </a>
+            <a href="" class="card">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
@@ -102,8 +102,8 @@
                 <span class="on-sale">
                     -30%
                 </span>
-            </div>
-            <div class="card levis-hover">
+            </a>
+            <a href="" class="card levis">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
@@ -115,15 +115,15 @@
                 <span>
                     <span class="sale">14,99&euro;</span>
                     <span class="or-price">29,99&euro;</span>
+                </span>ù
+                <span class="sustainable double">
+                    Sostenibilità
                 </span>
                 <span class="on-sale">
                     -50%
                 </span>
-                <span class="sustainable">
-                    Sostenibilità
-                </span>
-            </div>
-            <div class="card maya-hover">
+            </a>
+            <a href="" class="card maya">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
@@ -135,8 +135,8 @@
                 <span>
                     <span class="sale">99,99&euro;</span>
                 </span>
-            </div>
-            <div class="card esprit-hover">
+            </a>
+            <a href="" class="card esprit">
                 <div class="heart">
                     <i class="fa-solid fa-heart"></i>
                 </div>
@@ -151,10 +151,10 @@
                 <span class="sustainable">
                     Sostenibilità
                 </span>
-            </div>
+            </a>
         </div>
     </main>
-
+    <a ></a>
     <footer>
         <div class="container d-flex space-between align-items-center">
             <div class="info">
