--- a/zucchero.html
+++ b/zucchero.html
@@ -49,19 +49,19 @@
     </header>
 
     <main>
-            <div class="container d-flex product">
+        <div class="container d-flex product">
             <div class="heart">
-                <i class="fa-solid fa-heart"></i>
-            </div>
-            <div class="levis-fit">
-                <img src="./assets/img/1.webp" alt="levis">
-            </div>
-            <span>LEVI'S</span>
-            <h5>RELAXED FIT TEE UNISEX </h5>
-            <span>
-                <span class="sale">14,99&euro;</span>
-                <span class="or-price">29,99&euro;</span>
-            </span>
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+                <div class="zucchero">
+                    <img src="./assets/img/3.webp" alt="zucchero">
+                </div>
+                <span>COME ZUCCHERO FILATO</span>
+                <h5>VOGLIA DI COLORI PASTELLO</h5>
+                <span>
+                    <span class="sale">129,99&euro;</span>
+                    <span class="or-price">184,99&euro;</span>
+                </span>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo ratione ut velit, 
                 esse tempore placeat animi beatae molestiae assumenda cupiditate dignissimos, 
                 asperiores sapiente, enim temporibus quas voluptates totam alias ullam.</p>
